--- a/Adventure Game/Properties/Resources.resx
+++ b/Adventure Game/Properties/Resources.resx
@@ -190,6 +190,9 @@
   <data name="battle cry" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\323083__liamg-sfx__battle-cry-5.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="death" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\173126__replix__death-sound-male.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="groan" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\345734__noahpardo__deep-groan-3.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -202,8 +205,26 @@
   <data name="hmmm" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\165011__dan2008ds__hmmmm.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="kill them all" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\397299__theuncertainman__kill-them-all.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="laugh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\508899__nicknamelarry__sarcastic-cartoon-laughter.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\159368__huminaatio__6-o.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="orc noise" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\407356__forthehorde68__fx-orc.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="stab" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\413497__inspectorj__stab-metal-knife-in-lettuce-e.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="thank you" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\243947__xtrgamr__thank-you-very-much.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="victory cry" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\165491__chripei__victory-cry-reverb-2.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="vomit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\446001__breviceps__gagging-vomit-throwing-up.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
