--- a/Adventure Game/Properties/Resources.resx
+++ b/Adventure Game/Properties/Resources.resx
@@ -220,6 +220,9 @@
   <data name="laugh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\508899__nicknamelarry__sarcastic-cartoon-laughter.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Map_Location_256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Map-Location-256.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ok" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\159368__huminaatio__6-o.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
